Actualizacion 1, css y formulario

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola Mundo</title>
+    <link rel="icon" href="img/Colombia-Flag-icon.png">     
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -29,6 +31,19 @@
     
 
     <a href="pagina2.html">Ir a otra pagina</a>
+    <a href="Formularios.html">Ir a formularios</a>
+    <br>
+
+    <audio controls>
+        <source src="Sonidos/fluidity-100-ig-edit-4558.mp3">
+        <source src="Sonidos/fluidity-100-ig-edit-4558.ogg">
+    </audio>
+    <br>
+
+    <video width="100%" controls>
+
+        <source src="img/Ink - 67358.mp4"> 
+    </video>
 
 </body>
 
