--- a/pagina2.html
+++ b/pagina2.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 2</title>
+    <title>Pagina 2</title>    
+    <link rel="stylesheet" href="css/main.css">    
+    <link rel="icon" href="img/Colombia-Flag-icon.png"> 
 </head>
 <body>
 <a href="index.html">Regresar al inicio</a>    
